deploy/calculator-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-calculator-deployment
  namespace: default
  labels:
    app: go-calculator
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-calculator
  template:
    metadata:
      labels:
        app: go-calculator
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "2121"
    spec:
      containers:
      - name: go-calculator
        image: k8s-go-calculator-service:0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 50051
        - containerPort: 2121
