deploy/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-api-service
  namespace: default

spec:
  type: NodePort
  selector:
    app: go-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8080
