deploy/calculator-service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-calculator-service
  namespace: default

spec:
  type: ClusterIP
  selector:
    app: go-calculator
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
