deploy/prometheus-deployment.yml
# Source: https://faun.pub/k8s-microservice-monitoring-using-prometheus-and-grafana-106d0397b01b
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus-server
  namespace: default
spec:
  serviceName: "external-lb-prometheus-server"
  replicas: 2
  selector:
    matchLabels:
      app: prometheus-server
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      serviceAccountName: monitoring-service-account
      securityContext:
        fsGroup: 2000
        runAsUser: 1000
        runAsNonRoot: true
      containers:
      - name: prometheus
        image: prom/prometheus:v2.7.1
        command: [ "/bin/prometheus", "--config.file=/etc/prometheus/prometheus.yml","--storage.tsdb.path=/data"]
        ports:
        - containerPort: 9090
          name: api
        volumeMounts:
        - name: prometheus-data
          mountPath: /data
        - name: prometheus-configmap
          mountPath: /etc/prometheus
      volumes:
      - name: prometheus-configmap
        configMap:
          # Provide the name of the ConfigMap containing the files
          name: prometheus-configmap
  volumeClaimTemplates:
  - metadata:
      name: prometheus-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi

---

apiVersion: v1
kind: Service
metadata:
  name: external-lb-prometheus-server
  namespace: default
  labels:
    app: prometheus-server
spec:
  type: LoadBalancer
  selector:
    app: prometheus-server
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
