deploy/ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: calculator-ui
  namespace: default

spec:
  type: NodePort
  selector:
    app: calculator-ui
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 80
