deploy/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calculator-ui
            port:
              number: 4000

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: go-api-service
            port:
              number: 3000
